--- a/html/3D.html
+++ b/html/3D.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="../css/Splash.css">
+<link rel="stylesheet" type="text/css" href="../css/3D.css">
 <!---------------------------------------------HEAD------------------------------------------------>
-<title> Splash </title>
+<title> 3D </title>
 <!------------------------------------------------------------------------------------------------->
 </head>
 <body>
@@ -11,6 +11,6 @@
 <!------------------------------------------------------------------------------------------------->
 <script src="../_Demo/jquery.min.js"></script>
 <script src="../_Demo/jcanvas.min.js"></script>
-<script src="../js/Splash.js"></script>
+<script src="../js/3D.js"></script>
 </body>
 </html>
