--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <tr><td><a href="html/Convertor.html">Convertor</a></td></tr>
 <tr><td><a href="html/BouncyBalls.html">BouncyBalls</a></td></tr>
 <tr><td><a href="html/Splash.html">Splash</a></td></tr>
+<tr><td><a href="html/3D.html">3D</a></td></tr>
 </table>
 <!------------------------------------------------------------------------------------------------->
 </body>
