--- a/html/3D.html
+++ b/html/3D.html
@@ -9,8 +9,8 @@
 <!---------------------------------------------BODY------------------------------------------------>
 <canvas id="_canvas"></canvas>
 <!------------------------------------------------------------------------------------------------->
-<script src="../_Demo/jquery.min.js"></script>
-<script src="../_Demo/jcanvas.min.js"></script>
+<script src="../Demo/jquery.min.js"></script>
+<script src="../Demo/jcanvas.min.js"></script>
 <script src="../js/3D.js"></script>
 </body>
 </html>
