--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <!---------------------------------------------HEAD------------------------------------------------>
 <title> index </title>
 <style>
+	*{
+		padding: 0;
+		margin: 0;
+	}
 	body {
 		background-color: #16161d;
+		z-index: -1;
 	}
 	html{
 		text-align: center;
@@ -36,6 +41,17 @@
 		padding-right: 10px;
 		text-align: center;
 	}
+	canvas {
+		z-index: 0;
+		background-color: rgba(0,0,0,0);
+		position: relative;
+	}
+	table {
+		position: absolute;
+		z-index: 1;
+		padding: 5px;
+		margin: 5px;
+	}
 </style>
 <!------------------------------------------------------------------------------------------------->
 </head>
@@ -47,6 +63,81 @@
 <tr><td><a href="html/Splash.html">Splash</a></td></tr>
 <tr><td><a href="html/3D.html">3D</a></td></tr>
 </table>
+<canvas id="_canvas"></canvas>
+
 <!------------------------------------------------------------------------------------------------->
+<script src="Demo/jquery.min.js" ></script>
+<script src="Demo/jcanvas.min.js" ></script>
+
+<script>
+	var mouse = {
+		x: 0,
+		y: 0
+	}
+	
+	window.addEventListener('mousemove', function(event){
+		mouse.x = event.x;
+		mouse.y = event.y;
+	});
+
+	var C = $('#_canvas'); // canvas
+
+	//oggetto
+	function Circle(x, y, r, Vx, Vy, a, g, color)
+	{
+		this.x = x;
+		this.y = y;
+		this.r = r;
+		this.Vy = Vy;
+		this.Vx = Vx;
+		this.a = a;
+		this.g = g;
+		this.draw = function()
+		{
+			C.drawArc({
+			  layer: true,
+			  fillStyle: color,
+			  x: this.x, y: this.y,
+			  radius: this.r,
+			  start: 0, end: 360
+			});
+		}
+		this.update = function()
+		{
+			if (this.x + r >= window.innerWidth || this.x - r <= 0 || this.y + r >= window.innerHeight || this.y - r <= 0)
+			{
+				if (this.x + this.r >= window.innerWidth)	{Vx = -Vx*a; this.x = window.innerWidth - this.r}
+				if (this.x - this.r <= 0)					{Vx = -Vx*a; this.x = 0 + this.r}
+				if (this.y + this.r >= window.innerHeight)	{Vy = -Vy*a; this.y = window.innerHeight - this.r; Vx *= a}
+				if (this.y - this.r <= 0)					{Vy = -Vy*a; this.y = 0 + this.r}
+			}
+			else 											{Vy += g;}
+			this.y += Math.ceil(Vy);
+			this.x += Vx;
+			this.draw();
+			
+			//interactivity
+			if( mouse.x - this.x < r && mouse.x - this.x > -r && mouse.y - this.y < r && mouse.y - this.y > -r) {
+				Vy = mouse.y - this.y;
+				Vx = mouse.x - this.x;
+			}
+		}
+	}
+	
+	ball = new Circle(26,window.innerHeight/2,25,10,-10,0.8,1,"#bb0000")
+	
+	//animate
+	function animate(){
+		requestAnimationFrame(animate);
+		C.attr("width",window.innerWidth).attr("height",window.innerHeight);
+		C.clearCanvas();
+		C.removeLayers();
+		
+		ball.update();
+		
+	}
+	animate();
+</script>
+
 </body>
 </html>
