--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <tr><td><a href="html/BouncyBalls.html">BouncyBalls</a></td></tr>
 <tr><td><a href="html/Splash.html">Splash</a></td></tr>
 <tr><td><a href="html/3D.html">3D</a></td></tr>
+<tr><td><a href="html/3Dobj.html">3Dobj</a></td></tr>
 </table>
 <canvas id="_canvas"></canvas>
 
