--- a/html/3Dobj.html
+++ b/html/3Dobj.html
@@ -2,12 +2,12 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../css/3Dobj.css">
 <!---------------------------------------------HEAD------------------------------------------------>
-<title> 3D </title>
+<title> 3Dobj </title>
 <!------------------------------------------------------------------------------------------------->
 </head>
 <body>
 <!---------------------------------------------BODY------------------------------------------------>
-<canvas id="_canvas"></canvas>
+<canvas id="_canvas" style="background-color:#16161d"></canvas>
 <!------------------------------------------------------------------------------------------------->
 <script src="../Demo/jquery.min.js"></script>
 <script src="../Demo/jcanvas.min.js"></script>
