--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <!---------------------------------------------HEAD------------------------------------------------>
-<title> index </title>
+<title> Index </title>
 <style>
 	*{
 		padding: 0;
