--- a/html/3Dobj.html
+++ b/html/3Dobj.html
@@ -8,6 +8,10 @@
 <body>
 <!---------------------------------------------BODY------------------------------------------------>
 <canvas id="_canvas" style="background-color:#16161d"></canvas>
+<div id="documentazione">
+<p>Documentazione </p>
+<img alt="cartesian" src="../Miscs/cartesian.png"></img>
+</div>
 <!------------------------------------------------------------------------------------------------->
 <script src="../Demo/jquery.min.js"></script>
 <script src="../Demo/jcanvas.min.js"></script>
