--- a/html/BouncyBalls.html
+++ b/html/BouncyBalls.html
@@ -8,6 +8,24 @@
 <body>
 <!---------------------------------------------BODY------------------------------------------------>
 <canvas id="_canvas"></canvas>
+<div id="documentazione">
+<p>Documentazione </p> <br>
+<div>
+	<p>Click..........show doc</p>
+	<p>Up............0 gravity</p>
+	<p>Down.....normal gravity</p>
+	<p>Left............-1 Ball</p>
+	<p>Right...........+1 Ball</p>
+	<br>
+	<p class="slide"><span>click for show code</span> >> Gravità:</p>
+	<img  alt="gravità code" src="../Miscs/Gravity.png"></img>
+	<br>
+	<p class="slide"><span>click for show code</span> >> Oggetto per le balls:</p>
+	<img  alt="Class code" src="../Miscs/Ball.png"></img>
+	<br>
+	<p class="slide"><span>click for show code</span> >> Creazioni di balls da inserire nel canvas</p>
+	<img  alt="Iniz code" src="../Miscs/BallIniz.png"></img>
+</div>
 <!------------------------------------------------------------------------------------------------->
 <script src="../Demo/jquery.min.js"></script>
 <script src="../Demo/jcanvas.min.js"></script>
