--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 <tr><td><a href="html/Splash.html">Splash</a></td></tr>
 <tr><td><a href="html/3D.html">3D</a></td></tr>
 <tr><td><a href="html/3Dobj.html">3Dobj</a></td></tr>
+<tr><td><a href="html/IP.html">IP</a></td></tr>
 </table>
 <canvas id="_canvas"></canvas>
 
