--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <tr><td><a href="html/3D.html">3D</a></td></tr>
 <tr><td><a href="html/3Dobj.html">3Dobj</a></td></tr>
 <tr><td><a href="html/IP.html">IP</a></td></tr>
-<tr><td><a href="html/math.html">Math</a></td></tr>
+<tr><td><a href="html/Math.html">Math</a></td></tr>
 </table>
 <canvas id="_canvas"></canvas>
 
