--- a/html/Math.html
+++ b/html/Math.html
@@ -58,7 +58,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="../Demo/jquery.min.js"> </script>
 	<script src="../Demo/math.js"> </script>
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
 	<script src="../js/math.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
