--- a/html/Math.html
+++ b/html/Math.html
@@ -36,22 +36,24 @@
 		<button class="btn btn-danger" id="elaborate" style="width:100%">Elaborate</button>
 		</div>
 		
-		<br>
+		<hr>
 				<div id="pretty">$$$$</div>
-		<br>
+		<hr>
 
 		<div class="row">
 		
-			<div id="graphicStuffs">
 				<table>
 					
-						<tr><td><header>Rectangle</header></td> <td><p class="answer" id="Rectangle"></p></td></tr>
-						<tr><td><header>Trapezoidal</header></td> <td><p class="answer" id="Trapezoidal"></p></td></tr>
-						<tr><td><header>Parable</header></td> <td><p class="answer" id="Parable"></p></td></tr>
+						<tr><td><header class="info">Rectangle</header></td> <td><p class="answer" id="Rectangle"></p></td></tr>
+						<tr><td><header class="info">Trapezoidal</header></td> <td><p class="answer" id="Trapezoidal"></p></td></tr>
+						<tr><td><header class="info">Parable</header></td> <td><p class="answer" id="Parable"></p></td></tr>
 						
 				</table>
-			</div>
 		</div>
+		
+		<hr>
+		
+		<canvas id="defaultCanvas0" class="p5Canvas"></canvas>
 			
 	</div>
     <!-- Optional JavaScript -->
@@ -60,6 +62,7 @@
 	<script src="../Demo/math.js"> </script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.3/MathJax.js?config=TeX-AMS-MML_HTMLorMML.js"></script>
 	<script src="../js/math.js"></script>
+	<script src="../Demo/p5.min.js"> </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
