--- a/html/Math.html
+++ b/html/Math.html
@@ -57,6 +57,33 @@
 					<tr><td><div>$$Zoom:$$</div></td> <td><input id="zoom" type="number" value="25" step="5" min="1"></input></td></tr>
 					<tr><td><div>$$Graphic:$$</div></td> <td><input  id="graphic" type="number" value="0.2" step="0.1" min="0.2" max="2"></input></td></tr>
 		</table>
+		<table id="extra">		
+			
+					<tr>
+					<td>
+					<div class="form-check form-check-inline">
+					  <input class="form-check-input" type="checkbox" id="RectangleCB" value="option1">
+					  <label class="form-check-label" for="inlineCheckbox1">Rectangle</label>
+					</div>
+					</td>
+					<td>
+					<div class="form-check form-check-inline">
+					  <input class="form-check-input" type="checkbox" id="TrapezoidalCB" value="option2">
+					  <label class="form-check-label" for="inlineCheckbox2">Trapezoidal</label>
+					</div>
+					</td>
+					<td>
+					<div class="form-check form-check-inline">
+					  <input class="form-check-input" type="checkbox" id="ParableCB" value="option3">
+					  <label class="form-check-label" for="inlineCheckbox3">Parable</label>
+					</div>
+					</td>
+					</tr>
+					
+		</table>
+		
+		<hr>
+		
 		<div id="myContainer">
 		</div>
 			
