--- a/html/Math.html
+++ b/html/Math.html
@@ -15,6 +15,18 @@
   </head>
   <body>
   
+	<div id="loading">
+	<br>
+	<br>
+	<br>
+	<br>
+	<pre>
+Please wait, the operation
+may take a few minutes...
+	</pre>
+	<img src="../Miscs/hourglass.gif" alt="wait"></img>
+	</div>
+  
 	<header>Integrazione Numerica</header>
 	
 	<div class="container">
@@ -50,6 +62,7 @@
 		
 			
 	</div>
+	<div id="graphicStuff">
 		<div id="settings">
 		+
 		</div>
@@ -57,7 +70,7 @@
 		<table id="setting">
 				
 					<tr><td><div>$$Zoom:$$</div></td> <td><input id="zoom" type="range" value="50" step="5" min="10" max="200"></input></td></tr>
-					<tr><td><div>$$Graphic:$$</div></td> <td><input  id="graphic" type="range" value="0.01" step="0.025" min="0.01" max="0.11"></input></td></tr>
+					<tr><td><div>$$Graphic:$$</div></td> <td><input  id="graphic" type="range" value="0.11" step="0.025" min="0.01" max="0.11"></input></td></tr>
 		</table>
 		
 		<div id="extra">		
@@ -74,6 +87,8 @@
 		
 		<div id="myContainer">
 		</div>
+		
+	</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="../Demo/jquery.min.js"> </script>
