Script now visible from debugger.

--- a/FramesJS/index.html
+++ b/FramesJS/index.html
@@ -80,7 +80,7 @@ Examples:
 
 <span id="footer">By <span class="red"> RIPY </span> @xripy</span>
 <script src="script.js"></script>
-<!-- <script src="FramesJS.js"></script> -->
+<script src="FramesJS.js"></script>
 </body>
 
 <!-- Div templates -->
