--- a/WindowControl/index.html
+++ b/WindowControl/index.html
@@ -31,7 +31,7 @@
 <body>
 <!---------------------------------------------BODY------------------------------------------------>
 <pre>
-Check code at: <a href="https://github.com/xRIPY/WindowControl">https://github.com/xRIPY/WindowControl</a>
+Download at: <a href="https://github.com/xRIPY/WindowControl/releases">https://github.com/xRIPY/WindowControl/releases</a>
 
 README.txt:
 Simple program to add more control over a window
