--- a/OekakiWidgetJS/index.html
+++ b/OekakiWidgetJS/index.html
@@ -9,13 +9,21 @@
 </head>
 <body>
 <!---------------------------------------------BODY------------------------------------------------>
+<pre>
+1397 lines, abandoned. 
+I tought of a better system for it; too sad about it to redo it now
+So, until I decide to remake it, have this version.
+It works for what it is, just dont undo and redo too much if you are using the layers.
+---
+Made this to learn the gist of how drawing program works.
 
-1397 lines, abandoned. <br>
-I tought of a better system for it; too sad about it to redo it now <br>
-So, until I decide to remake it, have this version. <br>
-It works for what it is, just dont undo and redo too much if you are using the layers. <br>
---- <br>
-Made this to learn the justs of how drawing program works.
+Drag the link on the bookmark to use it anywhere.
+Click it to test it
+
+---
+
+[ lasso / bucket / color picker ] are not implemented.
+<pre>
 <!-- just pass the script under https://meyerweb.com/eric/tools/dencoder/ -->
 <div id="ClickMeBox"><div id="ClickMeInside">
 <a href="javascript:(function(){
