--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 		height:4ex;
 		width:8ex;
 	}
+	.legacy{
+		opacity: 0;
+	}
 </style>
 <!------------------------------------------------------------------------------------------------->
 </head>
@@ -90,6 +93,7 @@
 <tr onclick="location.href = 'WindowControl/index.html'"><td class="title" >WindowControl.exe</td><td class="desc">Download an AHK script to control transparency of windows and more!<span class="ver">ver.1.0.1</span></td></tr>
 <tr onclick="location.href = 'FramesJS/index.html'"><td class="title">FramesJS.js</td><td class="desc">Analyse video/gif frame by frame!<span class="ver">ver.1.0.0</span></td></tr>
 <tr onclick="location.href = 'OekakiWidgetJS/index.html'"><td class="title">OekakiWidgetJS.js</td><td class="desc">Draw on any HTML page!<span class="ver">ver.1.5.2</span></td></tr>
+<tr class="legacy" onclick="location.href = '_Legacy/index.html'"><td class="title">Legacy</td><td class="desc"><span class="red" style="font-family:MS PGothic" >(っ・ω・)っ</span></td></tr>
 </table>
 <canvas id="canvas"></canvas>
 <div id="ballMaker">
@@ -106,7 +110,7 @@
 <!------------------------------------------------------------------------------------------------->
 <script>
 
-	console.log("%cHi! ;3","color: red; font-weight: bold");
+	console.log("%cHi! %c(っ・ω・)っ","color: red; font-weight: bold","font-family:MS PGothic");
 	
 	let cursor = 0;
 	const KONAMI_CODE = [38, 38, 40, 40, 37, 39, 37, 39, 66, 65];
