--- a/WindowControl/index.html
+++ b/WindowControl/index.html
@@ -34,30 +34,65 @@
 Download at: <a href="https://github.com/xRIPY/WindowControl/releases">https://github.com/xRIPY/WindowControl/releases</a>
 
 README.txt:
-Simple program to add more control over a window
-Instructions:
-- F1	| Toggle "AlwaysOnTop" of window
-- F2	| Change Opacity of window
-- F3	| Set window as "Anchor"
-- F4	| Exit
+Simple program to add more control over a window.
+
+---#-Features: ---
+ - Change window opacity with ease!
+ - Always on top toggle! 
+ - Display / Hide windows temporary!
+ - Send inputs to a background window without losing the current window focus! 
+ - And more!
+
+.
+.
+.
+
+---#-Note: ---
+
+This program has been made to help me while drawing, to ease the process of viewing references images while maintaining drawing space.
+Turns out its very useful for every-day PC stuff too; managing the file explorer when moving around files comes to mind.
+This to say that the following lines will talk with drawing in mind.
+
+---#-Usage example: ---</b>
+- Put your drawing program full screen, press F1 on a window with an image to keep it on sight. 
+- Open up blender, load a 3D model, set the stage, adjust a weapon angle etc... Open drawing program, lower opacity with F2, now you can trace.
+- Other way around works too, draw something, put blender on top, lower its opacity, now you can do the 3D adjustments stuff while seeing the drawing; now switch back to the drawing program, adjust the opacity, and trace.
+- Set your browser window as "anchor" with F3, go on youtube, watch a video, you see something cool to draw? Press WIN+SPACE to quickly pause it, now draw it.
+Or go on an image site with a lot of images, with WIN+ARROW you can scroll / go to another image without losing the pen touch.
+If all else fails, WIN+Z will bring the window to focus while holding the Z key, this way you can click buttons, or move the window around, saves you some clicks.
+- Sometimes arrow keys are annoying to press, with ALT+W/A/S/D you can emulate them.
+- Your mom enters the room? WIN+X -> CTRL will minimize the current active window.
+
+---#-Instructions: ---
+
+General:
+- F1			| Toggle "AlwaysOnTop" of window
+- F2			| Change Opacity of window
+- F3			| Set window as "Anchor"
+- F4			| Exit
 
 Anchor hotkeys:
 - WIN + [Space]		| Sends the [Space] input to the Anchor window.
 - WIN + [Arrow key]	| Sends the [Arrow key] input to the Anchor window.
 - WIN + [WASD]		| Sends the equivalent [Arrow key] input to the Anchor window.
 
-- WIN + [Z]		| While [Z] is pressed, the Anchor window becomes the active window. 
-			| -Press [Shift] to prevent key spam. ([Alt] works too, or just keep [Win] pressed)
-			| -Press [Ctrl] to keep the window open.
+- WIN + [Z]		| While [Z] is pressed, the Anchor window becomes the active window. (Goes to the front)<br />
+			| -Press [Shift] to prevent key spam. ([Alt] works too, or just keep [Win] pressed)<br />
+			| -Press [Ctrl] to keep the window open.<br />
 			| -Press [Alt+tab] to go back to your previous window.
 
 Other:
-- ALT + [WASD]		| Presses the equivalent [Arrow key] input.
+- ALT + [WASD]		| Presses the equivalent [Arrow key] input.<br />
+- WIN + [X]		| While [X] is pressed, the current window becomes minimized. (Goes to the back)<br />
+			| -Press [Shift] to prevent key spam. ([Alt] works too, or just keep [Win] pressed)<br />
+			| -Press [Ctrl] to keep the window minimized.<br />
+			| -Press [Alt+tab] to go back to your previous window.
 ___
 
-Notes:
+Extra notes:
 If you wish to change the Keys you must edit and recomplie the .AHK
 Program by RIPY @xripy
+Enjoy the Bonus Seal. 
 </pre>
 <span id="footer" style="">By <span style="color:#aa2f2f"> RIPY </span> @xripy</span>
 
